[workspace]
members = ["lib/s3s_ipc"]
resolver = "2"

[workspace.package]
authors = ["Textile <contact@textile.io"]
description = "An S3 adapter for Textile IPC Object Storage."
edition = "2021"
homepage = "https://github.com/tablelandnetwork/s3-ipc/"
license = "MIT OR Apache-2.0"
readme = "./README.md"
repository = "https://github.com/tablelandnetwork/s3-ipc/"
keywords = ["s3", "ipc", "filecoin", "tableland"]
version = "0.1.0"

[patch.crates-io]
# Contains some API changes that the upstream has not merged.
merkle-tree-rs = { git = "https://github.com/consensus-shipyard/merkle-tree-rs.git", branch = "dev" }