[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
name = "basin_s3"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
categories = ["database"]
keywords = ["s3", "basin"]

[[bin]]
name = "basin_s3"
required-features = ["binary"]

[features]
default = []
binary = ["tokio/full", "dep:clap", "dep:tracing-subscriber", "dep:hyper-util"]

[dependencies]
async-trait = "0.1.73"
bytes = "1.4.0"
clap = { version = "4.3.21", optional = true, features = ["derive", "env"] }
futures = "0.3.28"
hex-simd = "0.8.0"
hyper-util = { version = "0.1.5", optional = true, features = [
    "server-auto",
    "server-graceful",
    "http1",
    "http2",
    "tokio",
] }
md-5 = "0.10.5"
mime = "0.3.17"
s3s = "0.10.0"
time = "0.3.25"
tokio = { version = "1.31.0", features = ["fs", "io-util"] }
tokio-util = { version = "0.7.8", features = ["io"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", optional = true, features = ["env-filter", "time"] }
transform-stream = "0.3.0"
uuid = { version = "1.4.1", features = ["v4"] }

anyhow = "1.0.80"

fvm_shared = "4.1.0"
adm_sdk = { git = "https://github.com/textileio/basin.git",  rev = "1cc20965563d9d2046d8cc8b8ec81053d8d336de"}
adm_provider = { git = "https://github.com/textileio/basin.git",  rev = "1cc20965563d9d2046d8cc8b8ec81053d8d336de"}
adm_signer = { git = "https://github.com/textileio/basin.git",  rev = "1cc20965563d9d2046d8cc8b8ec81053d8d336de"}
fendermint_vm_message = { git = "https://github.com/textileio/ipc.git", rev = "c1b54024da38080fba411f0ec292cf806e49f129" }
fendermint_actor_machine = { git = "https://github.com/textileio/ipc.git", rev = "c1b54024da38080fba411f0ec292cf806e49f129" }
fendermint_crypto = { git = "https://github.com/textileio/ipc.git", rev = "c1b54024da38080fba411f0ec292cf806e49f129" }
tendermint-rpc = { version = "0.31.1", features = [
    "secp256k1",
    "http-client",
    "websocket-client",
] }
bytestring = "1.3.1"
async-tempfile = "0.5.0"
tempfile = "3.10.1"
homedir = "0.3.3"
clap-verbosity-flag = "2.2.1"

[dev-dependencies]
anyhow = { version = "1.0.73", features = ["backtrace"] }
aws-config = { version = "1.1.2", default-features = false }
aws-credential-types = { version = "1.1.2", features = ["test-util"] }
aws-sdk-s3 = { version = "1.12.0", features = ["behavior-version-latest"] }
once_cell = "1.18.0"
s3s-aws = "0.10.0"
tokio = { version = "1.31.0", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "time"] }